[package]
authors = ["The Servo Project Developers"]
build = "build.rs"
edition = "2018"
license = "MPL-2.0"
name = "servo_atoms"
publish = false
version = "0.0.1"

[lib]
path = "lib.rs"

[dependencies]
string_cache = { workspace = true }

[build-dependencies]
string_cache_codegen = { workspace = true }
