[package]
authors = ["The Servo Project Developers"]
edition = "2018"
license = "MPL-2.0"
name = "background_hang_monitor"
publish = false
version = "0.0.1"

[lib]
doctest = false
name = "background_hang_monitor"
path = "lib.rs"
test = false

[dependencies]
backtrace = { workspace = true }
crossbeam-channel = { workspace = true }
ipc-channel = { workspace = true }
libc = { workspace = true }
log = { workspace = true }
msg = { path = "../msg" }
serde_json = { workspace = true }

[dev-dependencies]
lazy_static = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
mach = "0.3"

[target.'cfg(all(target_os = "linux", not(any(target_arch = "arm", target_arch = "aarch64"))))'.dependencies]
nix = "0.14"
unwind-sys = "0.1.1"
