[package]
authors = ["The Servo Project Developers"]
edition = "2018"
license = "MPL-2.0"
name = "bluetooth"
publish = false
version = "0.0.1"

[lib]
name = "bluetooth"
path = "lib.rs"

[dependencies]
bitflags = { workspace = true }
bluetooth_traits = { path = "../bluetooth_traits" }
device = { git = "https://github.com/servo/devices", features = ["bluetooth-test"], rev = "cb28c4725ffbfece99dab842d17d3e8c50774778" }
embedder_traits = { path = "../embedder_traits" }
ipc-channel = { workspace = true }
log = { workspace = true }
servo_config = { path = "../config" }
servo_rand = { path = "../rand" }
uuid = { workspace = true }

[features]
native-bluetooth = ["device/bluetooth"]
