[package]
authors = ["The Servo Project Developers"]
edition = "2018"
license = "MPL-2.0"
name = "bluetooth_traits"
publish = false
version = "0.0.1"

[lib]
name = "bluetooth_traits"
path = "lib.rs"

[dependencies]
embedder_traits = { path = "../embedder_traits" }
ipc-channel = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
