[package]
authors = ["The Servo Project Developers"]
edition = "2018"
license = "MPL-2.0"
name = "canvas"
publish = false
version = "0.0.1"

[lib]
name = "canvas"
path = "lib.rs"

[features]
no-wgl = ["surfman/sm-no-wgl"]
webgl_backtrace = ["canvas_traits/webgl_backtrace"]
xr-profile = ["webxr-api/profile", "time"]

[dependencies]
bitflags = { workspace = true }
byteorder = { workspace = true }
canvas_traits = { path = "../canvas_traits" }
crossbeam-channel = { workspace = true }
cssparser = { workspace = true }
euclid = { workspace = true }
fnv = { workspace = true }
font-kit = "0.11"
gfx = { path = "../gfx" }
gleam = { workspace = true }
half = "2"
ipc-channel = { workspace = true }
log = { workspace = true }
lyon_geom = "1.0.4"
num-traits = { workspace = true }
pathfinder_geometry = "0.5"
pixels = { path = "../pixels" }
raqote = "0.8.2"
servo_arc = { path = "../servo_arc" }
servo_config = { path = "../config" }
sparkle = { workspace = true }
style = { path = "../style" }
style_traits = { path = "../style_traits" }
surfman = { workspace = true }
time = { workspace = true, optional = true }
webrender = { workspace = true }
webrender_api = { workspace = true }
webrender_surfman = { path = "../webrender_surfman" }
webrender_traits = { path = "../webrender_traits" }
webxr = { git = "https://github.com/servo/webxr", features = ["ipc"] }
webxr-api = { git = "https://github.com/servo/webxr", features = ["ipc"] }
