[package]
authors = ["The Servo Project Developers"]
edition = "2018"
license = "MPL-2.0"
name = "canvas_traits"
publish = false
version = "0.0.1"

[lib]
name = "canvas_traits"
path = "lib.rs"

[features]
webgl_backtrace = []
xr-profile = ["webxr-api/profile", "time"]

[dependencies]
crossbeam-channel = { workspace = true }
cssparser = { workspace = true }
euclid = { workspace = true }
ipc-channel = { workspace = true }
lazy_static = { workspace = true }
malloc_size_of = { path = "../malloc_size_of" }
malloc_size_of_derive = { workspace = true }
pixels = { path = "../pixels" }
serde = { workspace = true }
serde_bytes = { workspace = true }
servo_config = { path = "../config" }
sparkle = { workspace = true }
style = { path = "../style" }
time = { workspace = true, optional = true }
webrender_api = { workspace = true }
webxr-api = { git = "https://github.com/servo/webxr", features = ["ipc"] }
