[package]
authors = ["The Servo Project Developers"]
edition = "2018"
license = "MPL-2.0"
name = "compositing_traits"
publish = false
version = "0.0.1"

[lib]
name = "compositing_traits"
path = "lib.rs"

[dependencies]
canvas = { path = "../canvas" }
crossbeam-channel = { workspace = true }
embedder_traits = { path = "../embedder_traits" }
euclid = { workspace = true }
gfx_traits = { path = "../gfx_traits" }
ipc-channel = { workspace = true }
keyboard-types = { workspace = true }
log = { workspace = true }
msg = { path = "../msg" }
net_traits = { path = "../net_traits" }
profile_traits = { path = "../profile_traits" }
script_traits = { path = "../script_traits" }
servo_url = { path = "../url" }
style_traits = { path = "../style_traits" }
webrender_api = { workspace = true }
webrender_surfman = { path = "../webrender_surfman" }
