[package]
authors = ["The Servo Project Developers"]
edition = "2018"
license = "MPL-2.0"
name = "servo_config"
publish = false
version = "0.0.1"

[lib]
name = "servo_config"
path = "lib.rs"

[dependencies]
embedder_traits = { path = "../embedder_traits" }
euclid = { workspace = true }
getopts = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
num_cpus = "1.1.0"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
servo_config_plugins = { path = "../config_plugins" }
servo_geometry = { path = "../geometry" }
servo_url = { path = "../url" }
url = { workspace = true }

[dev-dependencies]
std_test_override = { path = "../std_test_override" }

[target.'cfg(not(target_os = "android"))'.dependencies]
dirs-next = "2.0"
