[package]
authors = ["The Servo Project Developers"]
edition = "2018"
license = "MPL-2.0"
name = "servo_config_plugins"
publish = false
version = "0.0.1"

[lib]
name = "servo_config_plugins"
path = "lib.rs"
proc-macro = true

[dependencies]
itertools = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
