[package]
authors = ["The Servo Project Developers"]
edition = "2018"
license = "MPL-2.0"
name = "devtools"
publish = false
version = "0.0.1"

[lib]
name = "devtools"
path = "lib.rs"

[dependencies]
crossbeam-channel = { workspace = true }
devtools_traits = { path = "../devtools_traits" }
embedder_traits = { path = "../embedder_traits" }
headers = { workspace = true }
http = { workspace = true }
ipc-channel = { workspace = true }
log = { workspace = true }
msg = { path = "../msg" }
serde = { workspace = true }
serde_json = { workspace = true }
servo_config = { path = "../config" }
servo_rand = { path = "../rand" }
servo_url = { path = "../url" }
time = { workspace = true }
uuid = { workspace = true }
