[package]
authors = ["The Servo Project Developers"]
edition = "2018"
license = "MPL-2.0"
name = "devtools_traits"
publish = false
version = "0.0.1"

[lib]
name = "devtools_traits"
path = "lib.rs"

[dependencies]
bitflags = { workspace = true }
headers = { workspace = true }
http = { workspace = true }
ipc-channel = { workspace = true }
malloc_size_of = { path = "../malloc_size_of" }
malloc_size_of_derive = { workspace = true }
msg = { path = "../msg" }
serde = { workspace = true }
servo_url = { path = "../url" }
time = { workspace = true }
uuid = { workspace = true, features = ["serde"] }
