[package]
authors = ["The Servo Project Developers"]
edition = "2018"
license = "MPL-2.0"
name = "embedder_traits"
publish = false
version = "0.0.1"

[lib]
name = "embedder_traits"
path = "lib.rs"

[dependencies]
crossbeam-channel = { workspace = true }
ipc-channel = { workspace = true }
keyboard-types = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
msg = { path = "../msg" }
num-derive = "0.3"
num-traits = { workspace = true }
serde = { workspace = true }
servo_url = { path = "../url" }
webrender_api = { workspace = true }
webxr-api = { git = "https://github.com/servo/webxr", features = ["ipc"] }
