[package]
authors = ["The Servo Project Developers"]
edition = "2018"
license = "MPL-2.0"
name = "gfx_traits"
publish = false
version = "0.0.1"

[lib]
name = "gfx_traits"
path = "lib.rs"

[dependencies]
malloc_size_of = { path = "../malloc_size_of" }
malloc_size_of_derive = { workspace = true }
range = { path = "../range" }
serde = { workspace = true }
webrender_api = { workspace = true }
