[package]
authors = ["The Servo Project Developers"]
edition = "2018"
license = "MPL-2.0"
name = "jstraceable_derive"
publish = false
version = "0.0.1"

[lib]
path = "lib.rs"
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
syn = { workspace = true }
synstructure = { workspace = true }
