[package]
authors = ["The Servo Project Developers"]
edition = "2018"
license = "MPL-2.0"
name = "layout_2020"
publish = false
version = "0.0.1"

[lib]
doctest = false
name = "layout_2020"
path = "lib.rs"
test = false

[dependencies]
app_units = { workspace = true }
atomic_refcell = { workspace = true }
bitflags = { workspace = true }
canvas_traits = { path = "../canvas_traits" }
cssparser = { workspace = true }
embedder_traits = { path = "../embedder_traits" }
euclid = { workspace = true }
fnv = { workspace = true }
fxhash = { workspace = true }
gfx = { path = "../gfx" }
gfx_traits = { path = "../gfx_traits" }
html5ever = { workspace = true }
ipc-channel = { workspace = true }
libc = { workspace = true }
log = { workspace = true }
msg = { path = "../msg" }
net_traits = { path = "../net_traits" }
parking_lot = { workspace = true }
range = { path = "../range" }
rayon = { workspace = true }
script_layout_interface = { path = "../script_layout_interface" }
script_traits = { path = "../script_traits" }
serde = { workspace = true }
serde_json = { workspace = true }
servo_arc = { path = "../servo_arc" }
servo_url = { path = "../url" }
style = { path = "../style", features = ["servo"] }
style_traits = { path = "../style_traits" }
unicode-script = { workspace = true }
webrender_api = { workspace = true }
xi-unicode = { workspace = true }

[dev-dependencies]
lazy_static = { workspace = true }
quickcheck = "1"
