[package]
authors = ["The Servo Project Developers"]
edition = "2018"
license = "MPL-2.0"
name = "media"
publish = false
version = "0.0.1"

[lib]
name = "media"
path = "lib.rs"

[dependencies]
euclid = { workspace = true }
fnv = { workspace = true }
ipc-channel = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
servo-media = { git = "https://github.com/servo/media" }
servo_config = { path = "../config" }
webrender_api = { workspace = true }
webrender_traits = { path = "../webrender_traits" }
