[package]
authors = ["The Servo Project Developers"]
edition = "2018"
license = "MPL-2.0"
name = "metrics"
publish = false
version = "0.0.1"

[lib]
name = "metrics"
path = "lib.rs"

[dependencies]
gfx_traits = { path = "../gfx_traits" }
ipc-channel = { workspace = true }
log = { workspace = true }
malloc_size_of = { path = "../malloc_size_of" }
malloc_size_of_derive = { workspace = true }
msg = { path = "../msg" }
profile_traits = { path = "../profile_traits" }
script_traits = { path = "../script_traits" }
servo_config = { path = "../config" }
servo_url = { path = "../url" }
time = { workspace = true }
