[package]
authors = ["The Servo Project Developers"]
edition = "2018"
license = "MPL-2.0"
name = "msg"
publish = false
version = "0.0.1"

[lib]
doctest = false
name = "msg"
path = "lib.rs"
test = false

[dependencies]
ipc-channel = { workspace = true }
lazy_static = { workspace = true }
malloc_size_of = { path = "../malloc_size_of" }
malloc_size_of_derive = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true }
size_of_test = { path = "../size_of_test" }
webrender_api = { workspace = true }
