[package]
authors = ["The Servo Project Developers"]
edition = "2018"
license = "MPL-2.0"
name = "pixels"
publish = false
version = "0.0.1"

[lib]
name = "pixels"
path = "lib.rs"

[dependencies]
euclid = { workspace = true }
malloc_size_of = { path = "../malloc_size_of" }
malloc_size_of_derive = { workspace = true }
serde = { workspace = true, features = ["derive"] }
