[package]
authors = ["The Servo Project Developers"]
edition = "2018"
license = "MPL-2.0"
name = "profile"
publish = false
version = "0.0.1"

[lib]
name = "profile"
path = "lib.rs"

[dependencies]
ipc-channel = { workspace = true }
profile_traits = { path = "../profile_traits" }
serde = { workspace = true }
serde_json = { workspace = true }
servo_config = { path = "../config" }

[target.'cfg(target_os = "macos")'.dependencies]
task_info = { path = "../../support/rust-task_info" }

[target.'cfg(target_os = "linux")'.dependencies]
regex = { workspace = true }

[target.'cfg(not(target_os = "windows"))'.dependencies]
libc = { workspace = true }
servo_allocator = { path = "../allocator" }
