[package]
authors = ["The Servo Project Developers"]
edition = "2018"
license = "MPL-2.0"
name = "profile_traits"
publish = false
version = "0.0.1"

[lib]
name = "profile_traits"
path = "lib.rs"

[dependencies]
crossbeam-channel = { workspace = true }
ipc-channel = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
servo_config = { path = "../config" }
signpost = { git = "https://github.com/pcwalton/signpost.git" }
time = { workspace = true }
