[package]
authors = ["The Servo Project Developers"]
edition = "2018"
license = "MPL-2.0"
name = "servo_rand"
publish = false
version = "0.0.1"

[lib]
name = "servo_rand"
path = "lib.rs"

[dependencies]
lazy_static = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
rand_core = { workspace = true }
rand_isaac = { workspace = true }
uuid = { workspace = true }
