[package]
authors = ["The Servo Project Developers"]
edition = "2018"
license = "MPL-2.0"
name = "range"
publish = false
version = "0.0.1"

[lib]
name = "range"
path = "lib.rs"

[dependencies]
malloc_size_of = { path = "../malloc_size_of" }
malloc_size_of_derive = { workspace = true }
num-traits = { workspace = true }
serde = { workspace = true }
