[package]
authors = ["The Servo Project Developers"]
edition = "2018"
license = "MPL-2.0"
name = "servo_remutex"
publish = false
version = "0.0.1"

[lib]
doctest = false
name = "servo_remutex"
path = "lib.rs"
test = false

[dependencies]
lazy_static = { workspace = true }
log = { workspace = true }
