[package]
authors = ["The Servo Project Developers"]
build = "build.rs"
description = "CSS Selectors matching for Rust"
documentation = "https://docs.rs/selectors/"
edition = "2018"
keywords = ["css", "selectors"]
license = "MPL-2.0"
name = "selectors"
readme = "README.md"
repository = "https://github.com/servo/servo"
version = "0.24.0"

[lib]
name = "selectors"
path = "lib.rs"

[features]
bench = []
shmem = ["dep:to_shmem", "dep:to_shmem_derive"]

[dependencies]
bitflags = "1.0"
cssparser = "0.29"
derive_more = "0.99"
fxhash = "0.2"
log = "0.4"
phf = "0.10"
precomputed-hash = "0.1"
servo_arc = { version = "0.2", path = "../servo_arc" }
size_of_test = { path = "../size_of_test" }
smallvec = "1.0"
to_shmem = { version = "0.0.0", path = "../to_shmem", optional = true }
to_shmem_derive = { version = "0.0.0", path = "../to_shmem_derive", optional = true }

[build-dependencies]
phf_codegen = "0.10"
